Quick fix sidebar collapse

--- a/src/scss/portfolio.scss
+++ b/src/scss/portfolio.scss
@@ -23,6 +23,7 @@
         display: grid;
         align-items: center;
         padding-left: 6px;
+        padding-right: 0px;
     }
     .artist-playcount {
         width: calc(65% - 68px);
@@ -39,6 +40,11 @@
             border-top-right-radius: 30px;
             border-bottom-right-radius: 30px;
             flex-direction: row-reverse;
+            .artist-name {
+                text-align: right;
+                padding-left: 0;
+                padding-right: 6px;
+            }
         }
         &:nth-child(odd) {
             background-color: rgba($color: $orange-2, $alpha: 0.1);
